--- a/src/Controls/src/Core/Platform/Android/Resources/layout/navigationlayoutcontrols.axml
+++ b/src/Controls/src/Core/Platform/Android/Resources/layout/navigationlayoutcontrols.axml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<microsoft.maui.NavigationLayout
+<microsoft.maui.controls.platform.NavigationPageView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
@@ -10,17 +10,14 @@
 			android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-				>
+            android:background="?attr/colorPrimary">
 
 
 
         <com.google.android.material.appbar.MaterialToolbar
 				android:id="@+id/maui.toolbar"
 				android:layout_width="match_parent"
-				android:layout_height="?attr/actionBarSize"
-				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+				android:layout_height="?attr/actionBarSize"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -32,4 +29,4 @@
             app:defaultNavHost="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
-</microsoft.maui.NavigationLayout>
+</microsoft.maui.controls.platform.NavigationPageView>
